objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>JCONV__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCONV__ContentDocumentLinkCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContentDocumentLinkCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JCONV__Document_ID__c</fullName>
        <label>Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCONV__Folder_ID__c</fullName>
        <label>Folder ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCONV__Parent_object_type__c</fullName>
        <label>Parent object type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>